13499 System paging parameters no longer calculated at boot after 13097 Reviewed by: Dan McDonald <danmcd@joyent.com> Reviewed by: Joshua M. Clulow <josh@sysmgr.org> Approved by: Robert Mustacchi <rm@fingolfin.org>